--- a/src/web/css/shared.css
+++ b/src/web/css/shared.css
@@ -217,7 +217,7 @@ em {
 }
 
 #footer {
-  height: 2.5em;
+  height: 2.5rem;
   background-color: #111;
   position: fixed;
   bottom: 0;
